For older changes see ChangeLog-2004